Wed Oct 17 17:48:04 2001  George Lebl <jirka@5z.com>

	* testgnome.c: use gtk_main instead of bonobo_main

2001-10-11  Michael Meeks  <michael@ximian.com>

	* testgnome.c (create_newwin): use bonobo_ui_util_set_ui
	again.

	* Makefile.am (EXTRA_DIST): dist test-gnome.xml, define
	BUILDDIR

	* testgnome.c (main, create_font_selector): impl. a font
	selector test stub.

Sat Sep 29 15:51:17 2001  George Lebl <jirka@5z.com>

	* testgnome.c: cut-n-paste a bonobo function so that we can
	  load the ui from the current directory.  Also add test cases for
	  the icon entry, the pixmap entry, and make the about menu item
	  work

Tue Sep 04 19:11:54 2001  George Lebl <jirka@5z.com>

	* testgnome.c: add a testcase for gnome-about

2001-09-04  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am: Add test-entry.
	
	* testentry.c: New file.
	
	* testgnome.c: Some changes to work with new api.

Mon Sep 03 00:12:44 2001  George Lebl <jirka@5z.com>

	* testgnome.c: make it compile

Fri Aug 31 04:00:30 2001  George Lebl <jirka@5z.com>

	* testgnome.c: remove the test of the image entry since it no longer
	  exists

Fri Aug 31 04:00:30 2001  George Lebl <jirka@5z.com>

	* testgnome.c: remove the test of the image entry since it no longer
	  exists

Tue Aug 28 02:08:17 2001  George Lebl <jirka@5z.com>

	* test-gnome.c:  re-enable the test for gnome-file-entry.  For some
	  reason the druid one isn't working but there is testdruid now.

Sat Aug 25 20:18:48 2001  George Lebl <jirka@5z.com>

	* testdruid.c: fix "unused" warning

Sat Aug 25 00:33:41 2001  Jonathan Blandford  <jrb@redhat.com>

	* testdruid.c (main): new test program.

2001-08-24  Darin Adler  <darin@bentspoon.com>

	* testgnome.c: (create_entry): Update for new API.

2001-08-01  Anders Carlsson  <andersca@codefactory.se>

	* testgnome.c (verb_HelpAbout_cb): Update for new API.

2001-07-30  Joe Shaw  <joe@ximian.com>

	* testgnome.c (create_newwin): Get this building again by adding