@@ -1,3 +1,8 @@
+2001-10-14  Bastien Nocera  <hadess@hadess.net>
+
+	* testgnome.c: (create_font_picker), (main):
+	included font picker test, use new API
+
 Wed Oct 17 17:48:04 2001  George Lebl <jirka@5z.com>
 
 	* testgnome.c: use gtk_main instead of bonobo_main
